# sdf-modelica

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
.ci/: install_sdf-modelica.sh
cmake/: AddClangFormatTarget.cmake  FMIUtils.cmake
src/: CMakeLists.txt
src/sdf-modelica-lib/: CMakeLists.txt
src/sdf-modelica-lib/include/sdf_modelica/: nlohmann_json_to_kainjow_mustache.h  sdf_modelica.h  sdf_modelica_diagram_layout.h  sdf_modelica_diagram_layout_graphviz.h
src/sdf-modelica-lib/src/: nlohmann_json_to_kainjow_mustache.cpp  sdf_modelica.cpp  sdf_modelica_diagram_layout.cpp  sdf_modelica_diagram_layout_graphviz.cpp  template_path.hpp.in
src/sdf-modelica-lib/template/: model-to-be-included.txt  model.txt  mustache-modelica.txt
src/sdf-modelica-lib/test/: CMakeLists.txt  diagram_layout_graphviz_test.cpp  kr16_2.urdf  nlohmann_json_to_kainjow_mustache_test.cpp  oneLinkFixedToWorld.urdf  oneLinkPrismaticToWorld.urdf  oneLinkRevoluteToWorld.urdf  sdf_modelica_test.cpp  twoLinks.urdf
src/sdf2modelica/: CMakeLists.txt  sdf2modelica.cpp
src/test/: CMakeLists.txt
src/test/openmodelica/: CMakeLists.txt  mo2fmu.mos.in  sdf2fmu.cmake.in
